tests/baselines/reference/for-of51.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of51.ts(1,10): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.


==== tests/cases/conformance/es6/for-ofStatements/for-of51.ts (1 errors) ====
    for (let let of []) {}
             ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.